Fixing overlap

--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,7 @@ a {
 	top:0;
 	left:0;
 	width:100%;
-	height:110%;
+	height:100%;
 	background-color:black;
 	z-index: 110;
 	overflow: hidden;
